nodejs/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
  labels:
    app.kubernetes.io/name: nodejs
    app.kubernetes.io/version: "0.0.0"
    app.kubernetes.io/managed-by: helm
    app.kubernetes.io/component: http-server
spec:
  selector:
    app.kubernetes.io/name: nodejs
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
