nodejs/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: nodejs.suin.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nodejs-service
                port:
                  number: 80

# Note
# This ingress is using the nginx ingress controller
#
# ```
# helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
# helm repo update
# helm install ingress-nginx ingress-nginx/ingress-nginx
# ```
